--- a/TIME SERIES STATIONARITY.ipynb
+++ b/TIME SERIES STATIONARITY.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "7ddeb0e4-cd68-4d6d-893b-5b38329b1ecd",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "697001e6-7016-4950-8a39-c0e4f4d63f67",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "[2225 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "467b67a9-8a62-4e01-b2cf-ea09ece46528",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "a1322f58-74e5-4357-b68f-c8e887709de7",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "              dtype='datetime64[ns]', length=2225, freq='D')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "f11cdc16-b119-4f9e-9436-62da37efbc6b",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "2475f846-63b9-41bb-9cd3-1c2cbc430776",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "1f7194e8-2bae-4e67-b45b-5187b1234064",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "              dtype='datetime64[ns]', length=2225, freq='D')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,17 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "b93cf083-2793-4dc7-af73-8d00aedf5033",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18aa849a3e0>]"
+       "[<matplotlib.lines.Line2D at 0x18abe1a6050>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "dc348b89-ec0e-4ede-9dfc-106bbc42b3e2",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "703431d5-145f-4a25-a4e6-b341861966ab",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "e38f66fe-fa97-4ebb-9674-588942ea04c9",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "c3124627-3b03-4286-9982-6248b806225f",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "'Non-stationarity based on ADH'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "9ee68031-aecb-4689-b699-9c273992d7ee",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "-2.502734388619978"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "480438b6-a99c-491c-8b5f-c3bc17cf8068",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "0.11481043527381063"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "79ff13bb-86db-4117-a641-2273405c2d78",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "id": "656e4a58-206d-4b84-b2f7-d65af4196108",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "2223"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "d22753c1-03dc-4717-9b55-c2cd45a3085f",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        " '10%': -2.5674626062113077}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "id": "d3ec57aa-001b-415e-b66a-c9987ac35647",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "'Stationarity based on ADH'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "id": "b85cb175-b71a-4f47-8898-985fe9e93fab",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
        "-3.007236327367315"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "dfeb2f1a-2be3-45b6-ada9-fc0a1dc9cf06",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "0.03422412229093029"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "id": "dc8750e4-1441-4636-8c08-e982fee1bb48",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "970057e5-8590-4b54-ab6c-858575be95f0",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "2223"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "6dd0d582-f9d0-44ae-bdfa-0b79e3de048b",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        " '10%': -2.5674626062113077}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "id": "af85d7e3-88bb-4815-8d9b-55373a18c10f",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
        "<Figure size 1600x300 with 2 Axes>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "a8ddbc75-324d-458e-aa21-bf40f63ad59e",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "<Figure size 1600x300 with 2 Axes>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -870,23 +870,23 @@
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "\n",
     "fig, axes = plt.subplots(1,2,figsize=(16,3), dpi= 100)\n",
-    "plot_acf(dataset.Open.tolist(), lags=50, ax=axes[0])\n",
+    "plot_acf(dataset.Open.tolist(), lags=50, ax=axes[0])   #xaxis-->lag  y-->correlation\n",
     "plot_pacf(dataset.Open.tolist(), lags=50, ax=axes[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "4f2cdfdf-ae4d-4363-9776-824fe8743ca2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18abbbe0100>]"
+       "[<matplotlib.lines.Line2D at 0x18abf353850>]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -907,17 +907,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "7ce670e7-f779-485c-b4ef-1e60f109265c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18abe035ab0>]"
+       "[<matplotlib.lines.Line2D at 0x18abfda7ca0>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "id": "4bb7cd23-5d19-4a45-a9f2-70b1961ce072",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
        "<Axes: xlabel='y(t)', ylabel='y(t + 1)'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "d9d47cc1-e210-4ddb-85eb-e436bb5b541c",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
        "<Axes: xlabel='y(t)', ylabel='y(t + 1)'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1002,11 +1002,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "822a53df-5fa5-4216-95a4-9e6b06435151",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Approximate Entropy--> provides a way to quantify the regularity and unpredictability of time series data. \n",
+    "#It has been applied in various fields to analyze the complexity of different types of signals and time series.\n",
+    "\n",
+    "\n",
+    "#Sample Entropy--> is a useful tool for quantifying the complexity and irregularity of time series data across various domains, \n",
+    "#providing insights that can be applied in fields like medicine, biomechanics, and finance.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "339237eb-9a76-4cdf-b9ae-0f3f987e3a9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ApEn(U, m, r):\n",
+    "    \"\"\"Compute Aproximate entropy\"\"\"\n",
+    "    def _maxdist(x_i, x_j):\n",
+    "        return max([abs(ua - va) for ua, va in zip(x_i, x_j)])\n",
+    "\n",
+    "    def _phi(m):\n",
+    "        x = [[U[j] for j in range(i, i + m - 1 + 1)] for i in range(N - m + 1)]\n",
+    "        C = [len([1 for x_j in x if _maxdist(x_i, x_j) <= r]) / (N - m + 1.0) for x_i in x]\n",
+    "        return (N - m + 1.0)**(-1) * sum(np.log(C))\n",
+    "\n",
+    "    N = len(U)\n",
+    "    return abs(_phi(m+1) - _phi(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "edf4ac9d-499a-4aba-9c80-5a3840d801db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_18800\\2578661817.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  x = [[U[j] for j in range(i, i + m - 1 + 1)] for i in range(N - m + 1)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.027409184525792107\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(ApEn(dataset[\"Close\"], m=2, r=0.2*np.std(dataset[\"Close\"])))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21cec3e9-338b-4c74-a304-1313908af2af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculated ApEn value of 0.027 suggests that the \"Close\" column of the dataset has a relatively low complexity and high regularity. However, to draw stronger conclusions, it would be beneficial to compare this result to \n",
+    "#other time series or use cases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "51f57db9-9f6a-46f4-a2c6-fca54e3e2e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SampEn(U, m, r):\n",
+    "    \"\"\"Compute Sample entropy\"\"\"\n",
+    "    def _maxdist(x_i, x_j):\n",
+    "        return max([abs(ua - va) for ua, va in zip(x_i, x_j)])\n",
+    "\n",
+    "    def _phi(m):\n",
+    "        x = [[U[j] for j in range(i, i + m - 1 + 1)] for i in range(N - m + 1)]\n",
+    "        C = [len([1 for j in range(len(x)) if i != j and _maxdist(x[i], x[j]) <= r]) for i in range(len(x))]\n",
+    "        return sum(C)\n",
+    "\n",
+    "    N = len(U)\n",
+    "    return -np.log(_phi(m+1) / _phi(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "54af9cb7-d957-434b-8999-def7906d0ebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_18800\\1392444303.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  x = [[U[j] for j in range(i, i + m - 1 + 1)] for i in range(N - m + 1)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.007918086989927514\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(SampEn(dataset[\"Close\"], m=2, r=0.2*np.std(dataset[\"Close\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ade2eef-eda8-4cdf-8ad7-75a342b48f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the calculated SampEn value of 0.007918 indicates that the \"Close\" column of the dataset has a relatively low complexity and high regularity. Comparing this result to other time series or applications \n",
+    "#would provide more context for the interpretation."
+   ]
   }
  ],
  "metadata": {
